fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
 	margin: 0;
 	padding: 0;
 }
+body {
+	overflow: hidden;
+}
 nav {
 	height: 70px;
 	width: 100%;
